--- a/AppUI/Resources/Languages/StringResources.fr.xaml
+++ b/AppUI/Resources/Languages/StringResources.fr.xaml
@@ -740,7 +740,7 @@ Once done, do close the game and the launcher, and finally retry to click Play h
     <system:String x:Key="FileNotFoundAborting">fichier non trouvé. Abandon...</system:String>
     <system:String x:Key="Ff7ExeNotFoundYouMayNeedToConfigure">Exe de FF7 non trouvé. Vous devrez peut-être configurer 7H en utilisant le menu Paramètres > Paramètres Généraux.</system:String>
     <system:String x:Key="VerifyingInstalledGameIsCompatible">Vérification de la compatibilité du jeu installé...</system:String>
-    <system:String x:Key="ErrorCodeYarr">Code d'erreur : YARR ! Impossible de continuer. Cette version de FF7 semble être piratée. Merci d'utiliser une version authentique du jeu. Si cette version est authentique, veuillez signaler cette erreur sur les forums Qhimm.</system:String>
+    <system:String x:Key="ErrorCodeYarr">Échec de la vérification d'intégrité des fichiers EXE/DLL, veuillez réinstaller à partir du CD/GOG ou utiliser « Vérifier mes fichiers » pour réparer.</system:String>
     <system:String x:Key="VerifyingGameIsNotInstalledInProtectedFolder">Vérification que le jeu ne soit pas installé dans un dossier système ou protégé...</system:String>
 
     <system:String x:Key="Ff7IsCurrentlyInstalledInASystemFolder" xml:space="preserve">FF7 est actuellement installé dans un dossier système, ce qui peut empêcher les mods de fonctionner. Il est recommandé de l'installer dans C:\Games\Final Fantasy VII
