--- a/AppUI/Resources/Languages/StringResources.ja.xaml
+++ b/AppUI/Resources/Languages/StringResources.ja.xaml
@@ -736,7 +736,7 @@ Once done, do close the game and the launcher, and finally retry to click Play h
     <system:String x:Key="FileNotFoundAborting">file not found. Aborting ...</system:String>
     <system:String x:Key="Ff7ExeNotFoundYouMayNeedToConfigure">FF7.exe not found. You may need to configure 7H using the Settings>General Settings menu.</system:String>
     <system:String x:Key="VerifyingInstalledGameIsCompatible">Verifying installed game is compatible ...</system:String>
-    <system:String x:Key="ErrorCodeYarr">Error code: YARR! Unable to continue. Please report this error on the Qhimm forums.</system:String>
+    <system:String x:Key="ErrorCodeYarr">EXE/DLL 整合性チェックに失敗しました。CD/GOG から再インストールするか、「ファイルの検証」を使用して修復してください。</system:String>
     <system:String x:Key="VerifyingGameIsNotInstalledInProtectedFolder">Verifying game is not installed in a System/Protected folder ...</system:String>
 
     <system:String x:Key="Ff7IsCurrentlyInstalledInASystemFolder" xml:space="preserve">FF7 is currently installed in a System folder which can cause mods not to work. It is recommended you install it at C:\Games\Final Fantasy VII
